# point-transformer

./: README.md
config/support/: support_pt1_repro.yaml
data/support/: support_names.txt
lib/pointops/functions/: pointops.py
model/pointtransformer/: pointTransformerV3.py  pointtransformerV2.py  pointtransformer_seg.py
model/pointtransformer/serialization/: default.py  hilbert.py
tool/: export_onnx.py  inference_support.py  test_export_onnx_fps.py  test_export_onnx_group.py  test_onnxruntime_extensions.py  train.py
tool/C++_export/: CMakeLists.txt  fps.cpp  knnQuery.cpp
tool/inference_onnx_C++/: CMakeLists.txt  fps.cpp  inference.cpp  knnQuery.cpp
tool/inference_onnx_C++/AITools/: Interval.cpp  Interval.h  KDLineTree.cpp  KDLineTree.h  KDNode.cpp  KDNode.h  KDTreeBase.cpp  KDTreeBase.h  Point.cpp  Point.h  Tools.cpp  Tools.h
util/: SupportDataLoader.py
